Source/WebCore/history/CachedPage.cpp
@@ -30,9 +30,13 @@
 #include "Element.h"
 #include "FocusController.h"
 #include "FrameView.h"
+#include "HistoryController.h"
+#include "HistoryItem.h"
 #include "MainFrame.h"
+#include "NoEventDispatchAssertion.h"
 #include "Node.h"
 #include "Page.h"
+#include "PageTransitionEvent.h"
 #include "Settings.h"
 #include "VisitedLinkState.h"
 #include <wtf/CurrentTime.h>
@@ -69,13 +73,44 @@ CachedPage::~CachedPage()
         m_cachedMainFrame->destroy();
 }
 
+static void firePageShowAndPopStateEvents(Page& page)
+{
+    // Dispatching JavaScript events can cause frame destruction.
+    auto& mainFrame = page.mainFrame();
+    Vector<Ref<Frame>> childFrames;
+    for (auto* child = mainFrame.tree().traverseNextInPostOrderWithWrap(true); child; child = child->tree().traverseNextInPostOrderWithWrap(false))
+        childFrames.append(*child);
+
+    for (auto& child : childFrames) {
+        if (!child->tree().isDescendantOf(&mainFrame))
+            continue;
+        auto* document = child->document();
+        if (!document)
+            continue;
+
+        // FIXME: Update Page Visibility state here.
+        // https://bugs.webkit.org/show_bug.cgi?id=116770
+        document->dispatchPageshowEvent(PageshowEventPersisted);
+
+        auto* historyItem = child->loader().history().currentItem();
+        if (historyItem && historyItem->stateObject())
+            document->dispatchPopstateEvent(historyItem->stateObject());
+    }
+}
+
 void CachedPage::restore(Page& page)
 {
     ASSERT(m_cachedMainFrame);
     ASSERT(m_cachedMainFrame->view()->frame().isMainFrame());
     ASSERT(!page.subframeCount());
 
-    m_cachedMainFrame->open();
+    {
+        // Do not dispatch DOM events as their JavaScript listeners could cause the page to be put
+        // into the page cache before we have finished restoring it from the page cache.
+        NoEventDispatchAssertion noEventDispatchAssertion;
+
+        m_cachedMainFrame->open();
+    }
     
     // Restore the focus appearance for the focused element.
     // FIXME: Right now we don't support pages w/ frames in the b/f cache.  This may need to be tweaked when we add support for that.
@@ -115,6 +150,8 @@ void CachedPage::restore(Page& page)
         if (FrameView* frameView = page.mainFrame().view())
             frameView->updateContentsSize();
     }
+
+    firePageShowAndPopStateEvents(page);
 
     clear();
 }
