Source/WebCore/loader/FrameLoader.h
@@ -347,7 +347,6 @@ private:
 
     void closeOldDataSources();
     void willRestoreFromCachedPage();
-    void didRestoreFromCachedPage();
 
     bool shouldReloadToHandleUnreachableURL(DocumentLoader*);
 
